fixed alignment of writing page

--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -110,11 +110,12 @@ $base-style
   dt
     font-weight: bold
 
+
   table
     width: 100%
     border-collapse: collapse
     text-align: left
-    font-size: $font-size - 2px
+    font-size: $font-size - 1px
     overflow: auto
     display: block
 
